force-app/main/default/objects/Consumer__c/Consumer__c.object-meta.xml
<CustomObject>
    <label>Consumer</label>
    <nameField>
        <displayFormat>Consumers-{000}</displayFormat>
        <label>Consumer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>