force-app/main/default/objects/Consumer__c/fields/Consumer_Name__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Name__c</fullName>
    <formula>First_Name__c   + &apos; &apos; +  Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumer Name</label>
    <type>Text</type>
</CustomField>