force-app/main/default/objects/Consumer__c/fields/Rice_Mill_Name__c.field-meta.xml
<CustomField>
    <fullName>Rice_Mill_Name__c</fullName>
    <label>Rice Mill Name</label>
    <referenceTo>Rice_Mill__c</referenceTo>
    <relationshipLabel>Consumers</relationshipLabel>
    <relationshipName>Consumers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>