force-app/main/default/objects/Consumer__c/fields/Rice_Taken_By_Shops__c.field-meta.xml
<CustomField>
    <fullName>Rice_Taken_By_Shops__c</fullName>
    <label>Rice Taken By Shops</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>