force-app/main/default/objects/Consumer__c/fields/Rice_Taken_By_Shops_In_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Rice_Taken_By_Shops_In_Kgs__c</fullName>
    <label>Rice Taken By Shops In Kgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>