force-app/main/default/objects/Consumer__c/fields/Rice_Type__c.field-meta.xml
<CustomField>
    <fullName>Rice_Type__c</fullName>
    <label>Rice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basmati</fullName>
            </value>
            <value>
                <fullName>Normal Rice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>