force-app/main/default/objects/Consumer__c/validationRules/PhoneNumberOrEmailBlankRule.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNumberOrEmailBlankRule</fullName>
    <active>true</active>
    <description>Phone number and email number should not be blank</description>
    <errorConditionFormula>OR( ISBLANK( Phone_Number__c ) , ISBLANK( Email__c ) )</errorConditionFormula>
    <errorMessage>Please fill in your phone number.</errorMessage>
</ValidationRule>